[package]
name = "postgres-query-builder-derive"
version = "0.1.0"
authors = ["Liam <nghenglim@gmail.com>"]
edition = "2018"
description = "postgres builder derive to work with postgres"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-query-builder = { path = "../postgres-query-builder" }
