[package]
name = "postgres-query-builder-test"
version = "0.1.0"
authors = ["Liam <nghenglim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
postgres-query-builder = { path = "../postgres-query-builder" }
postgres-query-builder-derive = { path = "../postgres-query-builder-derive" }
postgres = "0.15"
