[package]
name = "postgres_query_builder_derive"
version = "0.1.0"
authors = ["Liam <nghenglim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres_query_builder = { path = "../postgres_query_builder" }
