[package]
name = "sqlink-derive"
version = "0.2.1"
authors = ["Liam <nghenglim@gmail.com>"]
edition = "2018"
description = "postgres builder derive to work with postgres"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlink = { version = "0.2.0", path = "../sqlink" }
