[package]
name = "sqlink-test"
version = "0.1.0"
authors = ["Liam <nghenglim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
sqlink = { path = "../sqlink" }
sqlink-derive = { path = "../sqlink-derive" }
postgres = "0.15"
